--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.Natively",
+     "bundleIdentifier": "nl.flowfam.gezinsapp",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
@@ -25,7 +25,7 @@
         "backgroundColor": "#000000"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.anonymous.Natively"
+      "package": "nl.flowfam.gezinsapp"
     },
     "web": {
       "favicon": "./assets/images/final_quest_240x240.png",
