--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo/metro-runtime": "~6.1.1",
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/slider": "^5.1.1",
     "@react-navigation/drawer": "^7.1.1",
@@ -41,7 +42,9 @@
     "expo-location": "^19.0.7",
     "expo-mail-composer": "^15.0.7",
     "expo-network": "^8.0.7",
+    "expo-print": "^15.0.7",
     "expo-router": "^6.0.0",
+    "expo-sharing": "^14.0.7",
     "expo-splash-screen": "^31.0.8",
     "expo-status-bar": "~3.0.7",
     "expo-symbols": "^1.0.6",
