--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo-location": "^19.0.7",
     "expo-mail-composer": "^15.0.7",
     "expo-network": "^8.0.7",
+    "expo-notifications": "^0.32.13",
     "expo-print": "^15.0.7",
     "expo-router": "^6.0.0",
     "expo-sharing": "^14.0.7",
