--- a/package.json
+++ b/package.json
@@ -23,17 +23,21 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/slider": "^5.1.1",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@supabase/supabase-js": "^2.86.0",
     "@types/difflib": "^0.2.7",
     "difflib": "^0.2.4",
     "docx": "^9.5.1",
     "eas": "^0.1.0",
     "expo": "~54.0.1",
+    "expo-apple-authentication": "^8.0.7",
     "expo-blur": "^15.0.6",
     "expo-calendar": "^15.0.7",
     "expo-constants": "~18.0.8",
+    "expo-crypto": "^15.0.7",
     "expo-font": "^14.0.7",
     "expo-glass-effect": "^0.1.1",
     "expo-haptics": "^15.0.6",
