--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-calendar": "^15.0.7",
     "expo-constants": "~18.0.8",
     "expo-crypto": "^15.0.7",
+    "expo-document-picker": "^14.0.7",
     "expo-font": "^14.0.7",
     "expo-glass-effect": "^0.1.1",
     "expo-haptics": "^15.0.6",
