--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "expo-image-picker": "^17.0.7",
     "expo-linear-gradient": "^15.0.6",
     "expo-linking": "^8.0.7",
+    "expo-localization": "^17.0.7",
     "expo-location": "^19.0.7",
     "expo-mail-composer": "^15.0.7",
     "expo-network": "^8.0.7",
@@ -57,8 +58,10 @@
     "expo-symbols": "^1.0.6",
     "expo-system-ui": "^6.0.7",
     "expo-web-browser": "^15.0.6",
+    "i18next": "^25.6.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.3.5",
     "react-native": "0.81.4",
     "react-native-css-interop": "^0.1.22",
     "react-native-edge-to-edge": "^1.7.0",
