--- a/eas.json
+++ b/eas.json
@@ -1,3 +1,4 @@
+
 {
   "build": {
     "development": {
@@ -10,7 +11,11 @@
       "autoIncrement": true
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "ios": {
+        "buildConfiguration": "Release",
+        "config": "eas-production.json"
+      }
     }
   }
 }
