--- a/eas.json
+++ b/eas.json
@@ -19,3 +19,17 @@
     }
   }
 }
+"production": {
+  "ios": {
+    "buildConfiguration": "Release",
+    "simulator": false,
+    "developmentClient": false,
+    "image": "latest",
+    "env": {},
+    "autoIncrement": true,
+    "resourceClass": "m1-large",
+    "cli": {
+      "args": ["--verbose"]
+    }
+  }
+}
