--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo": "~54.0.1",
     "expo-apple-authentication": "^8.0.7",
     "expo-blur": "^15.0.6",
+    "expo-build-properties": "^1.0.9",
     "expo-calendar": "^15.0.7",
     "expo-constants": "~18.0.8",
     "expo-crypto": "^15.0.7",
