--- a/app.json
+++ b/app.json
@@ -1,8 +1,7 @@
-
 {
   "expo": {
     "name": "Flow Fam",
-    "slug": "flowfam",
+    "slug": "Flow Fam",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/6f631a75-cdea-4028-adf7-a7ba1b956b8b.png",
@@ -58,5 +57,6 @@
         "projectId": "iykrwfgfdpnlfmdexrpr"
       }
     }
-  }
+  },
+  "scheme": "Flow Fam"
 }
