--- a/app.json
+++ b/app.json
@@ -18,9 +18,14 @@
       "bundleIdentifier": "nl.flowfam.gezinsapp",
       "deploymentTarget": "16.0",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "CFBundleDisplayName": "Flow Fam",
+        "CFBundleName": "FlowFam"
       },
-      "buildNumber": "1"
+      "buildNumber": "1",
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -43,7 +48,8 @@
         "expo-build-properties",
         {
           "ios": {
-            "deploymentTarget": "16.0"
+            "deploymentTarget": "16.0",
+            "useFrameworks": "static"
           },
           "android": {
             "compileSdkVersion": 34,
