--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "orientation": "portrait",
     "icon": "./assets/images/6f631a75-cdea-4028-adf7-a7ba1b956b8b.png",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "splash": {
       "image": "./assets/images/6f631a75-cdea-4028-adf7-a7ba1b956b8b.png",
       "resizeMode": "contain",
@@ -49,7 +49,8 @@
         {
           "ios": {
             "deploymentTarget": "16.0",
-            "useFrameworks": "static"
+            "useFrameworks": "static",
+            "flipper": false
           },
           "android": {
             "compileSdkVersion": 34,
@@ -68,6 +69,9 @@
       "eas": {
         "projectId": "iykrwfgfdpnlfmdexrpr"
       }
+    },
+    "hooks": {
+      "postPublish": []
     }
   }
 }
