fix: Configure iOS build settings for successful archiving

--- a/eas.json
+++ b/eas.json
@@ -30,12 +30,7 @@
         "resourceClass": "m1-large",
         "credentialsSource": "remote",
         "cache": {
-          "disabled": false,
-          "key": "flowfam-ios-cache-v1",
-          "cacheDefaultPaths": true,
-          "customPaths": [
-            "ios/Pods"
-          ]
+          "disabled": true
         }
       },
       "android": {
