--- a/app.json
+++ b/app.json
@@ -1,4 +1,3 @@
-
 {
   "expo": {
     "name": "Flow Fam",
@@ -7,39 +6,40 @@
     "orientation": "portrait",
     "icon": "./assets/images/6f631a75-cdea-4028-adf7-a7ba1b956b8b.png",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": false,
+
     "splash": {
       "image": "./assets/images/6f631a75-cdea-4028-adf7-a7ba1b956b8b.png",
       "resizeMode": "contain",
       "backgroundColor": "#F9F6F1"
     },
+
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "nl.flowfam.gezinsapp",
       "deploymentTarget": "16.0",
+      "buildNumber": "1",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "CFBundleDisplayName": "Flow Fam",
         "CFBundleName": "FlowFam"
-      },
-      "buildNumber": "1",
-      "config": {
-        "usesNonExemptEncryption": false
       }
     },
+
     "android": {
+      "package": "nl.flowfam.gezinsapp",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/6f631a75-cdea-4028-adf7-a7ba1b956b8b.png",
         "backgroundColor": "#F9F6F1"
       },
-      "edgeToEdgeEnabled": true,
-      "package": "nl.flowfam.gezinsapp",
-      "versionCode": 1
+      "edgeToEdgeEnabled": true
     },
+
     "web": {
       "favicon": "./assets/images/6f631a75-cdea-4028-adf7-a7ba1b956b8b.png",
       "bundler": "metro"
     },
+
     "plugins": [
       "expo-font",
       "expo-router",
@@ -60,18 +60,19 @@
         }
       ]
     ],
+
     "scheme": "flowfam",
+
     "experiments": {
-      "typedRoutes": true
+      "typedRoutes": true,
+      "newArchEnabled": true
     },
+
     "extra": {
       "router": {},
       "eas": {
         "projectId": "iykrwfgfdpnlfmdexrpr"
       }
-    },
-    "hooks": {
-      "postPublish": []
     }
   }
 }
