--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "Natively",
+  "name": "flowfam",
   "version": "1.0.0",
+  "private": true,
   "main": "index.ts",
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start --tunnel",
@@ -28,10 +29,8 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@supabase/supabase-js": "^2.86.0",
-    "@types/difflib": "^0.2.7",
     "difflib": "^0.2.4",
     "docx": "^9.5.1",
-    "eas": "^0.1.0",
     "expo": "~54.0.1",
     "expo-apple-authentication": "^8.0.7",
     "expo-blur": "^15.0.6",
@@ -59,6 +58,7 @@
     "expo-symbols": "^1.0.6",
     "expo-system-ui": "^6.0.7",
     "expo-web-browser": "^15.0.6",
+    "fast-deep-equal": "^3.1.3",
     "i18next": "^25.6.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -97,6 +97,5 @@
   },
   "resolutions": {
     "@expo/prebuild-config": "latest"
-  },
-  "private": true
+  }
 }
