revert: Restored to commit b50d6833 - feat: Implement new Flow Fam home screen with profile grid layout

--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
-
 {
   "expo": {
     "name": "Flow Fam",
-    "slug": "flowfam",
-    "version": "1.0.1",
+    "slug": "Flow Fam",
+    "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/6f631a75-cdea-4028-adf7-a7ba1b956b8b.png",
     "userInterfaceStyle": "automatic",
+    "newArchEnabled": false,
     "splash": {
       "image": "./assets/images/6f631a75-cdea-4028-adf7-a7ba1b956b8b.png",
       "resizeMode": "contain",
@@ -16,21 +16,24 @@
       "supportsTablet": true,
       "bundleIdentifier": "nl.flowfam.gezinsapp",
       "deploymentTarget": "16.0",
-      "buildNumber": "1",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "CFBundleDisplayName": "Flow Fam",
         "CFBundleName": "FlowFam"
+      },
+      "buildNumber": "1",
+      "config": {
+        "usesNonExemptEncryption": false
       }
     },
     "android": {
-      "package": "nl.flowfam.gezinsapp",
-      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/6f631a75-cdea-4028-adf7-a7ba1b956b8b.png",
         "backgroundColor": "#F9F6F1"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "nl.flowfam.gezinsapp",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/images/6f631a75-cdea-4028-adf7-a7ba1b956b8b.png",
@@ -58,13 +61,17 @@
     ],
     "scheme": "flowfam",
     "experiments": {
-      "typedRoutes": true,
-      "newArchEnabled": true
+      "typedRoutes": true
     },
     "extra": {
+      "router": {},
       "eas": {
-        "projectId": "143b077c-c9bc-49ad-8f27-0180e47a0e1a"
+        "projectId": "iykrwfgfdpnlfmdexrpr"
       }
+    },
+    "hooks": {
+      "postPublish": []
     }
-  }
+  },
+  "scheme": "Flow Fam"
 }
