--- a/app.json
+++ b/app.json
@@ -1,4 +1,3 @@
-
 {
   "expo": {
     "name": "Flow Fam",
@@ -85,5 +84,5 @@
       "appVersionSource": "local"
     }
   },
-  "scheme": "flowfam"
+  "scheme": "Flow Fam"
 }
