--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 {
   "expo": {
     "name": "Flow Fam",
-    "slug": "Flow Fam",
+    "slug": "flow-fam",
     "version": "1.0.6",
     "orientation": "portrait",
     "icon": "./assets/images/2a050481-20ba-4c09-ad33-1bfc7220789d.png",
