--- a/app.json
+++ b/app.json
@@ -73,6 +73,7 @@
         "projectId": "143b077c-c9bc-49ad-8f27-0180e47a6e1a"
       }
     },
+    "projectId": "143b077c-c9bc-49ad-8f27-0180e47a6e1a",
     "sdkVersion": "54.0.0",
     "platforms": [
       "ios",
@@ -82,6 +83,5 @@
     "cli": {
       "appVersionSource": "local"
     }
-  },
-  "scheme": "Flow Fam"
+  }
 }
