--- a/app.json
+++ b/app.json
@@ -1,8 +1,7 @@
-
 {
   "expo": {
     "name": "Flow Fam",
-    "slug": "flow-fam",
+    "slug": "Flow Fam",
     "version": "1.0.6",
     "orientation": "portrait",
     "icon": "./assets/images/2a050481-20ba-4c09-ad33-1bfc7220789d.png",
@@ -83,5 +82,6 @@
     "cli": {
       "appVersionSource": "local"
     }
-  }
+  },
+  "scheme": "Flow Fam"
 }
