--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.4.0",
