--- a/app.json
+++ b/app.json
@@ -82,7 +82,7 @@
     ],
     "cli": {
       "appVersionSource": "local"
-    }
-  },
-  "scheme": "Flow Fam"
+    },
+    "scheme": "flowfam"
+  }
 }
