--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
-
 {
   "name": "Natively",
   "version": "1.0.0",
   "main": "index.ts",
+  "private": true,
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start --clear --tunnel",
     "android": "EXPO_NO_TELEMETRY=1 expo start --android",
@@ -32,7 +32,6 @@
     "@types/difflib": "^0.2.7",
     "difflib": "^0.2.4",
     "docx": "^9.5.1",
-    "eas": "^0.1.0",
     "expo": "~54.0.1",
     "expo-apple-authentication": "^8.0.7",
     "expo-blur": "^15.0.6",
@@ -78,7 +77,6 @@
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "0.5.1",
     "react-router-dom": "^7.1.3",
-    "react-native-get-random-values": "^1.11.0",
     "workbox-cli": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-webpack-plugin": "^7.3.0"
@@ -100,6 +98,5 @@
   },
   "resolutions": {
     "@expo/prebuild-config": "latest"
-  },
-  "private": true
+  }
 }
